--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -10,3 +10,10 @@ jobs:
         run: |
           pip install -r requirements.txt
           python train.py
+      - name: Write CML Report
+        env:
+          REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          # Post reports
+          cat metrics.txt >> report.md
+          cml comment creaste report.md
