--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -16,4 +16,4 @@ jobs:
         run: |
           # Post reports
           cat metrics.txt >> report.md
-          cml comment creaste report.md
+          cml comment create report.md
